[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-commander"
version = "1.0.0"
description = "OpenEnv incident commander benchmark for AI platform operations"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "pydantic==2.7.1",
  "requests==2.32.3",
  "openai>=1.30.0",
  "python-dotenv==1.0.1",
  "numpy==1.26.4",
  "openenv-core>=0.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["app", "server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
